TP_[01]/.metadata/.plugins/org.eclipse.cdt.ui/TP1.build.log
21:56:50 **** Incremental Build of configuration Debug for project TP1 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\TP1.o" "..\\src\\TP1.c" 
..\src\TP1.c: In function 'main':
..\src\TP1.c:159:72: error: incompatible type for argument 1 of 'UTN_descuentoAumento'
  159 |                             tarjetaCreditoLatam = UTN_descuentoAumento(&precioLatamBase, 25);
      |                                                                        ^~~~~~~~~~~~~~~~
      |                                                                        |
      |                                                                        float *
In file included from ..\src\TP1.c:15:
..\src\calculosUTN.h:11:34: note: expected 'float' but argument is of type 'float *'
   11 | float UTN_descuentoAumento(float valor , float porcentaje);
      |                            ~~~~~~^~~~~

21:56:50 Build Failed. 1 errors, 0 warnings. (took 158ms)

